--- a/senaite/senaite.core.po
+++ b/senaite/senaite.core.po
@@ -1,18 +1,23 @@
+#
+# Translators:
+# Jordi Puiggené <jpuiggene@naralabs.com>, 2025
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2025-04-03 13:20+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2018-06-01 18:44+0000\n"
+"Last-Translator: Jordi Puiggené <jpuiggene@naralabs.com>, 2025\n"
+"Language-Team: English (United States) (https://app.transifex.com/senaite/teams/87045/en_US/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Language-Code: en\n"
 "Language-Name: English\n"
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: DOMAIN\n"
+"Language: en_US\n"
 
 #: bika/lims/content/bikasetup.py:959
 msgid " <p>The ID Server provides unique sequential IDs for objects such as Samples and Worksheets etc, based on a format specified for each content type.</p><p>The format is constructed similarly to the Python format syntax, using predefined variables per content type, and advancing the IDs through a sequence number, 'seq' and its padding as a number of digits, e.g. '03d' for a sequence of IDs from 001 to 999.</p><p>Alphanumeric prefixes for IDs are included as is in the formats, e.g. WS for Worksheet in WS-{seq:03d} produces sequential Worksheet IDs: WS-001, WS-002, WS-003 etc.</p><p>For dynamic generation of alphanumeric and sequential IDs, the wildcard {alpha} can be used. E.g WS-{alpha:2a3d} produces WS-AA001, WS-AA002, WS-AB034, etc.</p><p>Variables that can be used include:<table><tr><th style='width:150px'>Content Type</th><th>Variables</th></tr><tr><td>Client ID</td><td>{clientId}</td></tr><tr><td>Year</td><td>{year}</td></tr><tr><td>Sample ID</td><td>{sampleId}</td></tr><tr><td>Sample Type</td><td>{sampleType}</td></tr><tr><td>Sampling Date</td><td>{samplingDate}</td></tr><tr><td>Date Sampled</td><td>{dateSampled}</td></tr></table></p><p>Configuration Settings:<ul><li>format:<ul><li>a python format string constructed from predefined variables like sampleId, clientId, sampleType.</li><li>special variable 'seq' must be positioned last in theformat string</li></ul></li><li>sequence type: [generated|counter]</li><li>context: if type counter, provides context the counting function</li><li>counter type: [backreference|contained]</li><li>counter reference: a parameter to the counting function</li><li>prefix: default prefix if none provided in format string</li><li>split length: the number of parts to be included in the prefix</li></ul></p>"
@@ -760,29 +765,29 @@ msgstr ""
 #: bika/lims/profiles/default/types/Batch.xml
 #: bika/lims/vocabularies/__init__.py:128
 msgid "Batch"
-msgstr ""
+msgstr "Work Order TITLE"
 
 #: bika/lims/profiles/default/types/Batch.xml
 msgid "Batch Book"
-msgstr ""
+msgstr "Work Order Book"
 
 #: senaite/core/browser/samples/view.py:165
 msgid "Batch ID"
-msgstr ""
+msgstr "Work Order ID"
 
 #: senaite/core/profiles/default/types/BatchLabel.xml
 msgid "Batch Label"
-msgstr ""
+msgstr "Work Order Label"
 
 #: senaite/core/profiles/default/types/BatchLabels.xml
 msgid "Batch Labels"
-msgstr ""
+msgstr "Work Order Labels"
 
 #: bika/lims/browser/batchfolder.py:49
 #: bika/lims/profiles/default/types/BatchFolder.xml
 #: bika/lims/profiles/default/types/Client.xml
 msgid "Batches"
-msgstr ""
+msgstr "Work Orders"
 
 #: bika/lims/browser/viewlets/templates/dynamic_specs_viewlet.pt:19
 msgid "Be aware that the ranges provided in the spreadsheet file from the dynamic specification might override the ranges defined in the Specifications list below."
@@ -1105,7 +1110,7 @@ msgstr ""
 #: bika/lims/browser/batchfolder.py:84
 #: bika/lims/content/batch.py:101
 msgid "Client Batch ID"
-msgstr ""
+msgstr "Client Work Order ID"
 
 #: senaite/core/behaviors/clientshareable.py:90
 #: senaite/core/browser/samples/rejection/templates/rejection_report.pt:83
@@ -2523,11 +2528,11 @@ msgstr ""
 
 #: bika/lims/content/batch.py:138
 msgid "If no Title value is entered, the Batch ID will be used."
-msgstr ""
+msgstr "If no Title value is entered, the Work Order ID will be used."
 
 #: bika/lims/content/batch.py:134
 msgid "If no value is entered, the Batch ID will be auto-generated."
-msgstr ""
+msgstr "If no value is entered, the Work Order ID will be auto-generated."
 
 #: bika/lims/content/method.py:128
 msgid "If required, select a calculation for the The analysis services linked to this method. Calculations can be configured under the calculations item in the LIMS set-up"
@@ -2878,15 +2883,15 @@ msgstr ""
 
 #: senaite/core/exportimport/setupdata/__init__.py:2419
 msgid "InvoiceBatch has no End Date"
-msgstr ""
+msgstr "InvoiceWork Order has no End Date"
 
 #: senaite/core/exportimport/setupdata/__init__.py:2416
 msgid "InvoiceBatch has no Start Date"
-msgstr ""
+msgstr "InvoiceWork Order has no Start Date"
 
 #: senaite/core/exportimport/setupdata/__init__.py:2413
 msgid "InvoiceBatch has no Title"
-msgstr ""
+msgstr "InvoiceWork Order has no Title"
 
 #: senaite/core/config/widgets.py:60
 msgid "Job Title"
@@ -5549,7 +5554,7 @@ msgstr ""
 
 #: bika/lims/browser/batch/batchbook.py:38
 msgid "The batch book allows to introduce analysis results for all samples in this batch. Please note that submitting the results for verification is only possible within samples or worksheets, because additional information like e.g. the instrument or the method need to be set additionally."
-msgstr ""
+msgstr "The work order book allows to introduce analysis results for all samples in this work order. Please note that submitting the results for verification is only possible within samples or worksheets, because additional information like e.g. the instrument or the method need to be set additionally."
 
 #: bika/lims/content/analysisrequest.py:835
 msgid "The client side identifier of the sample"
@@ -6087,7 +6092,7 @@ msgstr ""
 
 #: bika/lims/content/organisation.py:52
 msgid "VAT number"
-msgstr ""
+msgstr "Tax ID"
 
 #: bika/lims/browser/analyses/view.py:221
 msgid "Valid"
@@ -6769,7 +6774,7 @@ msgstr ""
 #. Default: "Select the client of this batch"
 #: bika/lims/content/batch.py:81
 msgid "description_batch_client"
-msgstr ""
+msgstr "description_work_order_client"
 
 #. Default: "If this option is activated, the result capture date can be entered manually for analyses"
 #: bika/lims/content/bikasetup.py:345
@@ -6989,7 +6994,7 @@ msgstr ""
 #. Default: "Assign sample to a batch"
 #: bika/lims/content/analysisrequest.py:314
 msgid "description_sample_batch"
-msgstr ""
+msgstr "description_sample_work_order"
 
 #. Default: "The contacts used in CC for email notifications"
 #: bika/lims/content/analysisrequest.py:189
@@ -7572,7 +7577,7 @@ msgstr ""
 #. Default: "Client"
 #: bika/lims/content/batch.py:78
 msgid "label_batch_client"
-msgstr ""
+msgstr "label_work_order_client"
 
 #. Default: "Allow to set the result capture date"
 #: bika/lims/content/bikasetup.py:343
@@ -7822,7 +7827,7 @@ msgstr ""
 #. Default: "Batch"
 #: bika/lims/content/analysisrequest.py:311
 msgid "label_sample_batch"
-msgstr ""
+msgstr "label_sample_work_order"
 
 #. Default: "CC Contact"
 #: bika/lims/content/analysisrequest.py:186
@@ -8233,32 +8238,32 @@ msgstr ""
 #. Default: "Add"
 #: senaite/core/browser/controlpanel/batchlabels/view.py:50
 msgid "listing_batchlabels_action_add"
-msgstr ""
+msgstr "listing_workorderlabels_action_add"
 
 #. Default: "Title"
 #: senaite/core/browser/controlpanel/batchlabels/view.py:67
 msgid "listing_batchlabels_column_title"
-msgstr ""
+msgstr "listing_workorderlabels_column_title"
 
 #. Default: "Active"
 #: senaite/core/browser/controlpanel/batchlabels/view.py:77
 msgid "listing_batchlabels_state_active"
-msgstr ""
+msgstr "listing_workorderlabels_state_active"
 
 #. Default: "All"
 #: senaite/core/browser/controlpanel/batchlabels/view.py:93
 msgid "listing_batchlabels_state_all"
-msgstr ""
+msgstr "listing_workorderlabels_state_all"
 
 #. Default: "Inactive"
 #: senaite/core/browser/controlpanel/batchlabels/view.py:85
 msgid "listing_batchlabels_state_inactive"
-msgstr ""
+msgstr "listing_workorderlabels_state_inactive"
 
 #. Default: "Batch Labels"
 #: senaite/core/browser/controlpanel/batchlabels/view.py:57
 msgid "listing_batchlabels_title"
-msgstr ""
+msgstr "listing_workorderlabels_title"
 
 #. Default: "Add"
 #: senaite/core/browser/controlpanel/containertypes/view.py:51
@@ -9340,7 +9345,7 @@ msgstr ""
 #. Default: "Name"
 #: senaite/core/content/batchlabel.py:36
 msgid "title_batchlabel_title"
-msgstr ""
+msgstr "title_workorderlabel_title"
 
 #. Default: "This site was built using the Plone Open Source CMS/WCM."
 #: senaite/core/browser/viewlets/templates/colophon.pt:12
